# solv

./: .gitignore  CHANGELOG.md  complex.hs  default.nix  derivative.hs  practice.hs  solv.cabal
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
app/: Main.hs  Parser.hs
app/Parser/: Util.hs
app/old/: term.hs
lib/: BasicSum.hs  Solv.hs
lib/Solv/: Interpreter.hs  Parser.hs
tests/: InterpreterTest.hs  ParserTest.hs  Test.hs
