cabal-version:      2.4
name:               solv
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Fabian Kropfhamer
maintainer:         fabian.kropfhamer@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library solv-lib
    exposed-modules: 
        Solv
        Solv.Parser
        Solv.Interpreter
    build-depends:    base ^>=4.19
    hs-source-dirs:   lib
    default-language: Haskell2010

executable solv
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Parser
        Parser.Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.19
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends: base ^>=4.19, HUnit ^>=1.6, solv-lib
    hs-source-dirs: tests
    default-language: Haskell2010

    other-modules:
        ParserTest
        InterpreterTest
